--- a/miniprogram/pages/healthTips/healthTips.less
+++ b/miniprogram/pages/healthTips/healthTips.less
@@ -7,7 +7,7 @@ page {
   background-image: url('https://636c-cloud1-2g3w0puta97f2130-1345362468.tcb.qcloud.la/bg.jpeg?sign=d3381bf0a834bc64aa829e734be04a5b&t=1740662788');
   background-position: bottom center;
   background-size: 100%;
-  position:fixed;
+  position: fixed;
   top: 0;
   right: 0;
   left: 0;
@@ -57,11 +57,18 @@ page {
     }
   }
 }
+.tips-area {
+  position: fixed;
+  top: 390rpx;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
 
 .tips-container {
-  margin-top: 390rpx;
   padding: 40rpx 50rpx;
   background: #fff;
+  box-sizing: border-box;
 
   .tip-item {
     border-radius: 16rpx;
