--- a/miniprogram/components/healthList/index.less
+++ b/miniprogram/components/healthList/index.less
@@ -35,4 +35,17 @@
         }
     }
   }
+
+} 
+
+.empty-state {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 70rpx 0;
+}
+
+.empty-text {
+  color: #666;
+  font-size: 24rpx;
 } 
