--- a/miniprogram/pages/index/index.less
+++ b/miniprogram/pages/index/index.less
@@ -61,7 +61,7 @@ page{
 
 
 .purchased-services {
-  margin-top: 40rpx;
+
   padding: 0 60rpx;
   display: flex;
   flex-direction: column;
@@ -72,6 +72,8 @@ page{
     font-size: 44rpx;
     font-weight:400;
     color: #000;
+    border-bottom: 3rpx solid #94A0A1;
+    padding: 20rpx 0;
   }
   
   .service-list {
@@ -111,3 +113,15 @@ page{
     }
   }
 }
+
+.empty-state {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 70rpx 0;
+}
+
+.empty-text {
+  color: #666;
+  font-size: 24rpx;
+} 
