--- a/miniprogram/components/healthList/index.wxml
+++ b/miniprogram/components/healthList/index.wxml
@@ -1,17 +1,21 @@
 <view class="health-list">
     <view class="list-title">健康管理</view>
-    <view class="list-item" wx:for="{{data}}" wx:key="index" bindtap="goDetail" data-index="{{index}}">
-        <view class="item-left">
-            <view class="" hover-class="none" hover-stop-propagation="false">
-
-                {{item.title}}
+    <block wx:if="{{data && data.length > 0}}">
+        <view class="list-item" wx:for="{{data}}" wx:key="index" bindtap="goDetail" data-index="{{index}}">
+            <view class="item-left">
+                <view class="" hover-class="none" hover-stop-propagation="false">
+                    {{item.title}}
+                </view>
+                <view class="item-time" hover-class="none" hover-stop-propagation="false">
+                    {{item.time}}
+                </view>
             </view>
-            <view class="item-time" hover-class="none" hover-stop-propagation="false">
-                {{item.time}}
+            <view class="item-right">
+                <image src="/images/area-right-black.svg" />
             </view>
         </view>
-        <view class="item-right">
-            <image src="/images/area-right-black.svg" />
-        </view>
+    </block>
+    <view wx:else class="empty-state">
+        <view class="empty-text">您还未有任何健康管理文档</view>
     </view>
 </view>
