--- a/miniprogram/pages/healthRecords/healthRecords.less
+++ b/miniprogram/pages/healthRecords/healthRecords.less
@@ -4,10 +4,14 @@ page {
 
 
 .header-area {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
   background-image: url('https://636c-cloud1-2g3w0puta97f2130-1345362468.tcb.qcloud.la/bg.jpeg?sign=d3381bf0a834bc64aa829e734be04a5b&t=1740662788');
   background-position: bottom center;
   background-size: 100%;
-  position: relative;
   bottom: 0;
   height: 300rpx;
 
@@ -43,12 +47,15 @@ page {
   }
 }
 
+.scroll-area {
+  margin-top: 300rpx;
+}
+
 .container {
   padding-bottom: 200rpx;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  margin-top: 30rpx;
   gap: 30rpx;
 
 
