--- a/miniprogram/pages/healthRecords/healthRecords.less
+++ b/miniprogram/pages/healthRecords/healthRecords.less
@@ -103,4 +103,32 @@ page {
       }
     }
   }
+
+  .empty-state {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+    .empty-text {
+      font-size: 40rpx;
+      color: #333;
+      font-weight: 400;
+      padding: 179rpx 0 90rpx 0;
+    }
+    
+    .create-btn {
+      width: 500rpx;
+      height: 105rpx;;
+      line-height: 88rpx;
+      background: #3827FF;
+      color: #fff;
+      border-radius: 13rpx;
+      font-size: 32rpx;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-weight: 500;
+    }
+  }
 }
