--- a/miniprogram/pages/index/index.less
+++ b/miniprogram/pages/index/index.less
@@ -125,3 +125,13 @@ page{
   color: #666;
   font-size: 24rpx;
 } 
+
+.login-container {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0;
+  z-index: 99999;
+
+}
