--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -27,6 +27,10 @@
 
 </view>
 
+<view class="login-container" hover-class="none" hover-stop-propagation="false">
+  <login bindlogin="doLogin" />
+</view>
+
 <view class="container">
 
   <health-list list="{{healthManageList}}" />
