--- a/miniprogram/pages/product/product.less
+++ b/miniprogram/pages/product/product.less
@@ -1,10 +1,25 @@
 @import '../../styles/theme.less';
 
+.bg {
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+  background-image: url('https://636c-cloud1-2g3w0puta97f2130-1345362468.tcb.qcloud.la/product-bg.png?sign=3bdf0f60be8ec890483df77c011a22fa&t=1743174648');
+  background-size: 100% 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
 .container {
   min-height: 100vh;
   padding-bottom: calc(110rpx + env(safe-area-inset-bottom));
   box-sizing: border-box;
-  background: #333;}
+
+}
 
 .header-area {
   position: relative;
@@ -28,23 +43,23 @@
   }
 }
 
-.bg1{
+.bg1 {
   background: #159A00;
 }
 
-.bg2{
+.bg2 {
   background: #AB8014;
 }
 
-.bg3{
+.bg3 {
   background: #1786B6;
 }
 
-.bg4{
+.bg4 {
   background: #4A3AFF;
 }
 
-.bg-other{
+.bg-other {
   background: #4A3AFF;
 }
 
@@ -53,9 +68,10 @@
   width: 100%;
   padding: 30rpx;
   box-sizing: border-box;
+
   .area-title {
     font-size: 40rpx;
-    font-weight:400;
+    font-weight: 400;
     color: #fff;
     margin-bottom: 40rpx;
   }
@@ -70,20 +86,21 @@
 }
 
 .product-item {
-  border-radius:30rpx;
+  border-radius: 30rpx;
   padding: 30rpx;
 }
 
 .product-container {
   display: flex;
   flex-direction: column;
+
   .product-title {
     font-size: 40rpx;
     font-weight: 400;
     color: #fff;
     margin-bottom: 20rpx;
   }
-  
+
   .product-desc {
     font-size: 26rpx;
     font-weight: 400;
@@ -95,8 +112,8 @@
     background: #fff;
     color: #353535;
     display: inline-flex;
-    justify-content:flex-start;
-    align-items:center;
+    justify-content: flex-start;
+    align-items: center;
     padding: 8rpx 29rpx;
     border-radius: 100rpx;
 
@@ -124,4 +141,4 @@
       font-size: 25rpx;
     }
   }
-} 
+}
