--- a/miniprogram/pages/product/product.wxml
+++ b/miniprogram/pages/product/product.wxml
@@ -1,3 +1,4 @@
+<view class="bg"></view>
 <view class="container">
   <view class="header-area">
     <view class="header-container">
@@ -13,13 +14,8 @@
     </view>
 
     <view class="product-list">
-      <product-card 
-        wx:for="{{products}}" 
-        wx:key="id"
-        item="{{item}}"
-        type="normal"
-        bind:cardtap="navigateToProductInfo"
-      />
+      <product-card wx:for="{{products}}" wx:key="id" item="{{item}}" type="normal"
+        bind:cardtap="navigateToProductInfo" data-id="{{item.id}}" data-type="{{item.type}}" />
     </view>
   </view>
 
@@ -29,13 +25,8 @@
     </view>
 
     <view class="product-list">
-      <product-card 
-        wx:for="{{otherProducts}}" 
-        wx:key="id"
-        item="{{item}}"
-        type="other"
-        bind:cardtap="navigateToProductInfo"
-      />
+      <product-card wx:for="{{otherProducts}}" wx:key="id" item="{{item}}" type="other"
+        bind:cardtap="navigateToProductInfo" data-id="{{item.id}}" data-type="{{item.type}}" />
     </view>
   </view>
 </view>
