--- a/miniprogram/pages/schedule/schedule.less
+++ b/miniprogram/pages/schedule/schedule.less
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   background-color: #3827FF;
   min-height: 100vh;
+  padding-bottom: 100rpx;
   
   .schedule-header {
     padding: 20rpx 60rpx;
