--- a/miniprogram/pages/index/index.less
+++ b/miniprogram/pages/index/index.less
@@ -130,3 +130,10 @@ page{
   z-index: 99999;
 
 }
+.empty-reminds{
+  padding: 40rpx 30rpx;
+  background: #2415D5;
+  font-size: 30rpx;
+  font-weight: 600;
+  border-radius: 16rpx;
+}
