--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -58,7 +58,7 @@
       </view>
     </block>
     <view wx:else class="empty-state">
-      <view class="empty-text">您还未有任何健康管理文档</view>
+      <view class="empty-text">您还未有任何已购服务</view>
     </view>
   </view>
 </view>
