--- a/miniprogram/components/dataLoading/loading.wxml
+++ b/miniprogram/components/dataLoading/loading.wxml
@@ -1,5 +1,5 @@
 <view class="loading-container">
-  <image class="main-image" src="/images/login-bg.svg" mode="aspectFit"></image>
+  <!-- <image class="main-image" src="/images/login-bg.svg" mode="aspectFit"></image> -->
   <view class="loading-spinner">
     <view class="loading-dot"></view>
     <view class="loading-dot"></view>
