--- a/miniprogram/pages/healthRecords/healthRecords.wxml
+++ b/miniprogram/pages/healthRecords/healthRecords.wxml
@@ -1,3 +1,4 @@
+<data-loading text="加载中..." wx:if="{{loading}}" />
 <view class="header-area" hover-class="none" hover-stop-propagation="false">
   <view class="header-container">
     <view class="header-left" hover-class="none" hover-stop-propagation="false">
