--- a/miniprogram/pages/addRecord/addRecord.less
+++ b/miniprogram/pages/addRecord/addRecord.less
@@ -41,3 +41,273 @@
     }
   }
 }
+
+.add-record-container {
+  margin-top: 320rpx;
+  padding: 0 30rpx 40rpx;
+}
+
+.form-description {
+  text-align: center;
+  font-size: 28rpx;
+  color: #666;
+  margin-bottom: 40rpx;
+}
+
+.form-section {
+  background: #fff;
+  border-radius: 20rpx;
+  padding: 30rpx;
+  box-shadow: 0 2rpx 10rpx rgba(0, 0, 0, 0.05);
+}
+
+.section-title {
+  display: flex;
+  align-items: center;
+  margin-bottom: 30rpx;
+  font-size: 32rpx;
+  font-weight: 500;
+  color: #333;
+}
+
+.section-line {
+  width: 8rpx;
+  height: 32rpx;
+  background-color: #4169e1;
+  border-radius: 4rpx;
+  margin-right: 10rpx;
+}
+
+.section-subtitle {
+  font-size: 24rpx;
+  font-weight: normal;
+  color: #999;
+  margin-left: 10rpx;
+}
+
+.form-item {
+  margin-bottom: 30rpx;
+}
+
+.form-item-hint {
+  font-size: 24rpx;
+  color: #999;
+  margin-top: -20rpx;
+  margin-bottom: 30rpx;
+}
+
+.form-label {
+  display: block;
+  font-size: 28rpx;
+  color: #333;
+  margin-bottom: 15rpx;
+}
+
+.required:after {
+  content: ' *';
+  color: #e74c3c;
+}
+
+.form-input {
+  width: 100%;
+  height: 60rpx;
+  border: 1px solid #e6e6e6;
+  border-radius: 8rpx;
+  padding: 0 20rpx;
+  box-sizing: border-box;
+  font-size: 24rpx;
+  color: #333;
+  background-color: #fff;
+}
+
+.date-input {
+  display: flex;
+  align-items: center;
+}
+
+.picker-input {
+  display: flex;
+  align-items: center;
+}
+
+.address-input-container {
+  position: relative;
+  width: 100%;
+}
+
+.location-icon {
+  position: absolute;
+  right: 20rpx;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 44rpx;
+  height: 44rpx;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+}
+
+.icon-location {
+  font-size: 32rpx;
+}
+
+.location-icon image {
+  width: 32rpx;
+  height: 32rpx;
+}
+
+.radio-group {
+  display: flex;
+  align-items: center;
+}
+
+.radio-group-vertical {
+  display: flex;
+  flex-direction: column;
+  gap: 20rpx;
+}
+
+.radio-item {
+  display: flex;
+  align-items: center;
+  margin-right: 50rpx;
+  text{
+    font-size: 24rpx;
+  }
+}
+
+.radio-circle {
+  width: 24rpx;
+  height: 24rpx;
+  border-radius: 50%;
+  border: 2rpx solid #ccc;
+  margin-right: 10rpx;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.radio-circle.selected {
+  border-color: #4169e1;
+}
+
+.radio-circle.selected:after {
+  content: '';
+  width: 24rpx;
+  height: 24rpx;
+  border-radius: 50%;
+  background-color: #4169e1;
+  position: absolute;
+}
+
+.submit-btn-area {
+  margin-top: 50rpx;
+  padding: 0 30rpx;
+}
+
+.submit-btn {
+  width: 100%;
+  height: 88rpx;
+  line-height: 88rpx;
+  text-align: center;
+  background-color: #4169e1;
+  color: #fff;
+  font-size: 32rpx;
+  border-radius: 44rpx;
+  border: none;
+}
+
+.margin-top {
+  margin-top: 30rpx;
+}
+
+.sub-label {
+  font-size: 24rpx;
+  color: #999;
+  margin-bottom: 15rpx;
+}
+
+.checkbox-group {
+  display: flex;
+  flex-direction: column;
+  gap: 20rpx;
+}
+
+.checkbox-grid {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20rpx;
+  margin-top: 10rpx;
+}
+
+.checkbox-item {
+  display: flex;
+  align-items: center;
+  padding: 15rpx 20rpx;
+  border-radius: 8rpx;
+  width: calc(50% - 20rpx);
+  box-sizing: border-box;
+
+  text{
+    font-size: 24rpx;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .checkbox-item {
+    width: 100%;
+  }
+}
+
+.checkbox-item.checked {
+  background-color: #f0f5ff;
+}
+
+.checkbox-box {
+  width: 24rpx;
+  height: 24rpx;
+  border-radius: 6rpx;
+  border: 2rpx solid #ccc;
+  margin-right: 10rpx;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.checkbox-item.checked .checkbox-box {
+  border-color: #4169e1;
+  background-color: #4169e1;
+}
+
+.checkbox-inner {
+  width: 24rpx;
+  height: 24rpx;
+  position: relative;
+}
+
+.checkbox-inner:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 8rpx;
+  width: 6rpx;
+  height: 14rpx;
+  border-right: 3rpx solid #fff;
+  border-bottom: 3rpx solid #fff;
+  transform: rotate(45deg);
+}
+
+.form-textarea {
+  width: 100%;
+  height: 200rpx;
+  border: 1px solid #e6e6e6;
+  border-radius: 8rpx;
+  padding: 20rpx;
+  box-sizing: border-box;
+  font-size: 28rpx;
+  color: #333;
+  background-color: #fff;
+  margin-top: 20rpx;
+}
