--- a/miniprogram/pages/addRecord/addRecord.less
+++ b/miniprogram/pages/addRecord/addRecord.less
@@ -240,6 +240,8 @@
   flex-wrap: wrap;
   gap: 20rpx;
   margin-top: 10rpx;
+  border: 1px solid rgba(37,99,235, 0.1);
+  border-radius: 8rpx;
 }
 
 .checkbox-item {
@@ -247,7 +249,6 @@
   align-items: center;
   padding: 15rpx 20rpx;
   border-radius: 8rpx;
-  width: calc(50% - 20rpx);
   box-sizing: border-box;
 
   text{
@@ -265,39 +266,30 @@
   background-color: #f0f5ff;
 }
 
-.checkbox-box {
+
+wx-checkbox .wx-checkbox-input.wx-checkbox-input-checked {
+  color: #fff !important;
+  background-color: #3F72FF;
+  border: 2rpx solid #3F72FF
+}
+wx-checkbox .wx-checkbox-input {
+  /*margin-right: 10rpx;*/
+  -webkit-appearance: none;
+  appearance: none;
+  outline: 0;
+  text-indent: 0;
   width: 24rpx;
   height: 24rpx;
-  border-radius: 6rpx;
-  border: 2rpx solid #ccc;
-  margin-right: 10rpx;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.checkbox-item.checked .checkbox-box {
-  border-color: #4169e1;
-  background-color: #4169e1;
-}
-
-.checkbox-inner {
-  width: 24rpx;
-  height: 24rpx;
+  background-color: transparent;
   position: relative;
+  box-sizing: border-box;
+}
+/*钩大小*/
+wx-checkbox .wx-checkbox-input.wx-checkbox-input-checked:before {
+  font-size: 24rpx;
 }
 
-.checkbox-inner:before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 8rpx;
-  width: 6rpx;
-  height: 14rpx;
-  border-right: 3rpx solid #fff;
-  border-bottom: 3rpx solid #fff;
-  transform: rotate(45deg);
-}
+
 
 .form-textarea {
   width: 100%;
