--- a/miniprogram/pages/addRecord/addRecord.less
+++ b/miniprogram/pages/addRecord/addRecord.less
@@ -236,8 +236,9 @@
 }
 
 .checkbox-grid {
-  display: flex;
-  flex-wrap: wrap;
+  padding: 20rpx;
+  display:grid;
+  grid-template-columns: 50% 50%;
   gap: 20rpx;
   margin-top: 10rpx;
   border: 1px solid rgba(37,99,235, 0.1);
@@ -246,8 +247,9 @@
 
 .checkbox-item {
   display: flex;
-  align-items: center;
-  padding: 15rpx 20rpx;
+  align-items:center;
+  justify-content: flex-start;
+  padding:0 20rpx ;
   border-radius: 8rpx;
   box-sizing: border-box;
 
